--- a/Setu.API/appsettings.json
+++ b/Setu.API/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost; port=3306; database=schoolsetu; user=root; password=System123#; Persist Security Info=False; Connect Timeout=300"
+    "DefaultConnection": "server=localhost; port=3306; database=schoolsetu; user=root; password=System123#; Persist Security Info=False; Connect Timeout=300;SslMode=none"
   },
   "AllowedHosts": "*"
 }
