--- a/Setu.API/Setu.API.csproj
+++ b/Setu.API/Setu.API.csproj
@@ -59,6 +59,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2-beta1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0-alpha.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
   </ItemGroup>
@@ -66,6 +67,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Entities\Setu.Entities.csproj" />
     <ProjectReference Include="..\Setu.Common\Setu.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="PaymenGatewayHelper\Cashfree\" />
   </ItemGroup>
 
 
