--- a/Setu.API/appsettings.json
+++ b/Setu.API/appsettings.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost; port=3306; database=schoolsetu; user=root; password=System123#; Persist Security Info=False; Connect Timeout=300;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "PaymentGatewayBaseUrl": "https://payout-gamma.cashfree.com",
+  "CashFreeGatewayUsername": "CF166173C9VMQJKK5FLR74FPQUT0",
+  "CashFreeGatewayPassword": "d96debe000fa97e3d3fad52cf727926eb55ed0d1"
 }
