--- a/Setu.API/appsettings.json
+++ b/Setu.API/appsettings.json
@@ -7,10 +7,22 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost; port=3306; database=schoolsetu; user=root; password=System123#; Persist Security Info=False; Connect Timeout=300;"
+    "DefaultConnection": "server=localhost; port=3306; database=schoolsetu; user=root; password=System123#; Connect Timeout=300;"
   },
   "AllowedHosts": "*",
   "PaymentGatewayBaseUrl": "https://payout-gamma.cashfree.com",
   "CashFreeGatewayUsername": "CF166173C9VMQJKK5FLR74FPQUT0",
-  "CashFreeGatewayPassword": "d96debe000fa97e3d3fad52cf727926eb55ed0d1"
+  "CashFreeGatewayPassword": "d96debe000fa97e3d3fad52cf727926eb55ed0d1",
+  "MailSettings": {
+    "Mail": "aashishgupta1@gmail.com",
+    "DisplayName": "Aashish Gupta",
+    "Password": "iyjnvynplavjcjcj",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
+  "JWT": {
+    "Key": "THIS IS SECRET KEY FOR JWT TOKEN",
+    "Issuer": "",
+    "Audience": ""
+  }
 }
