--- a/Setu.Common/Setu.Common.csproj
+++ b/Setu.Common/Setu.Common.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="3.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="6.0.4" />
   </ItemGroup>
 
